webui: fix dialog z-index

--- a/webui/styles.css
+++ b/webui/styles.css
@@ -660,7 +660,7 @@ md-menu-item label {
 }
 
 .dialog-wrapper {
-    z-index: 5;
+    z-index: 15;
     position: relative;
 }
 
